# Fornjot

crates/fj-app/: Cargo.toml
crates/fj-app/src/: app_settings.rs  application.rs  application_old.rs  code_editor.rs  ecs_manager.rs  editor_window.rs  main.rs  main_ui.rs  project_manager.rs  settings_ui.rs  tmp_application.rs
crates/fj-app/src/ecs/: application_generator.rs  mod.rs  project_manager.rs  tabs.rs
crates/fj-app/src/editor/: code_editor.rs  editing_ui.rs  editor_window.rs  mod.rs  project.rs  project_manager.rs  render_settings.rs  viewport.rs  window.rs
crates/fj-app/src/editor/code_editor/: code_editor.rs  mod.rs  syntax_highlighting.rs
crates/fj-app/src/sidebar/: mod.rs
crates/fj-app/src/tabs/: mod.rs  tab_ecs_helper.rs  tree.rs
crates/fj-app/src/ui_tabs/: add_tab.rs  debug_ui.rs  mod.rs  settings_ui.rs  tab_wrapper.rs  welcome_ui.rs
crates/fj-host/: Cargo.toml
crates/fj-kernel/: Cargo.toml
crates/fj-kernel/src/parametric/: mod.rs
crates/fj-kernel/src/parametric/construction/: axis.rs  constraints.rs  orentation.rs  position.rs  wcs.rs
crates/fj-viewer/: Cargo.toml
crates/fj-viewer/src/: lib.rs  window.rs
crates/fj-viewer/src/graphics/: mod.rs  renderer.rs
crates/fj-window/src/: lib.rs  run.rs
