[package]
name = "fj-app"
version = "0.11.0"
edition = "2021"

description = """\
Early-stage, next-generation, code-first CAD application. Because the world \
needs another CAD program.\
"""
readme = "../../README.md"
homepage = "https://www.fornjot.app/"
repository = "https://github.com/hannobraun/fornjot"
license = "0BSD"
keywords = ["cad", "programmatic", "code-cad"]
categories = ["encoding", "mathematics", "rendering"]


[dependencies]
anyhow = "1.0.60"
bytemuck    = "1.8.0"
futures     = "0.3.21"
nalgebra    = "0.30.0"
parry3d-f64 = "0.8.0"
thiserror   = "1.0.30"
threemf     = "0.2.0"
tracing     = "0.1.32"
wgpu        = "0.13"
wgpu_glyph  = "0.16"
winit       = "0.26"
egui-wgpu = "0.18"
egui = "0.18"
egui-winit = "0.18"
eframe = "0.18"
bevy = "0.8"
bevy_egui = "0.15"
syntect = "5.0"
image = "0.24"
rfd = "0.8"


[dependencies.clap]
version = "3.2.16"
features = ["derive"]

[dependencies.figment]
version = "0.10.6"
features = ["env", "toml"]

[dependencies.fj]
version = "0.11.0"
path = "../fj"

[dependencies.fj-export]
version = "0.11.0"
path = "../fj-export"

[dependencies.fj-host]
version = "0.11.0"
path = "../fj-host"

[dependencies.fj-interop]
version = "0.11.0"
path = "../fj-interop"

[dependencies.fj-kernel]
version = "0.11.0"
path = "../fj-kernel"

[dependencies.fj-math]
version = "0.11.0"
path = "../fj-math"

[dependencies.fj-operations]
version = "0.11.0"
path = "../fj-operations"

[dependencies.fj-viewer]
version = "0.11.0"
path = "../fj-viewer"

[dependencies.fj-window]
version = "0.11.0"
path = "../fj-window"

[dependencies.serde]
version = "1.0.142"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter", "fmt"]
