[package]
name = "fj-viewer"
version = "0.6.0"
edition = "2021"

description = "The world needs another CAD program."
readme = "../../README.md"
homepage = "https://www.fornjot.app/"
repository = "https://github.com/hannobraun/fornjot"
license = "0BSD"
keywords = ["cad", "programmatic", "code-cad"]
categories = ["encoding", "mathematics", "rendering"]


[dependencies]
bytemuck = "1.9.1"
raw-window-handle = "0.4.3"
thiserror = "1.0.31"
tracing = "0.1.35"
wgpu = "0.12.0"
wgpu_glyph = "0.16.0"
winit       = "0.26.1"
egui_wgpu_backend = "0.17"
egui = "0.17"
egui-winit = "0.17"

[dependencies.fj-interop]
version = "0.6.0"
path = "../fj-interop"

[dependencies.fj-math]
version = "0.6.0"
path = "../fj-math"
